--- a/css/base.css
+++ b/css/base.css
@@ -39,7 +39,7 @@
 
 header {
   background: #3B5526;
-  padding: 0.25em 0;
+  padding: 0.2em 0;
   position: fixed;
   width: 100%;
   top: 0;
@@ -47,7 +47,7 @@ header {
 }
 
 header h1 {
-  font-size: 1.75em;
+  font-size: 1.5em;
   font-family: 'Gentium Basic', serif;
   display: inline-block;
   margin: 0 !important;
@@ -60,7 +60,7 @@ header h1 a:link, header h1 a:active, header h1 a:hover, header h1 a:visited {
 
 header img {
   vertical-align: middle;
-  height: 1.75em;
+  height: 1.5em;
 }
 
 /* Navigation */
@@ -68,22 +68,22 @@ header img {
 #mobile-menu {
   display: inline-block;
   float: right;
-  width: 1.75em;
-  height: 1.75em;
+  width: 1.5em;
+  height: 1.5em;
   color: #FFF;
-  font-size: 1.75em;
+  font-size: 1.5em;
 }
 
 #mobile-menu i {
   display: block;
   text-align: center;
-  line-height: 1.75;
+  line-height: 1.5;
   height: 100%;
 }
 
 #main-navigation {
   position: fixed;
-  top: 3.5625em;
+  top: 2.65em; /* 1.5em height * 1.5em font-size + 0.4em padding */
   width: 100%;
   z-index: 10000;
 }
@@ -94,6 +94,7 @@ header img {
   -ms-transition: all 300ms ease-in-out;
   -o-transition: all 300ms ease-in-out;
   transition: all 300ms ease-in-out;
+  font-size: 0.9em;
 }
 
 #main-navigation ul li {
@@ -122,7 +123,7 @@ header img {
 
 #main {
   padding: 0 0.25em;
-  margin-top: 4em;
+  margin-top: 3em;
 }
 
 #content {
