Use CSS include to add Font Awesome to Sphinx

--- a/sympy-live/css/live-sphinx.css
+++ b/sympy-live/css/live-sphinx.css
@@ -1,3 +1,5 @@
+@import url("http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css");
+
 #shell {
   position: fixed;
   bottom: 0;
