Use login text, not icons; reset webkit-appearance for iPhone

--- a/css/base.css
+++ b/css/base.css
@@ -70,12 +70,27 @@ header img {
   float: right;
   width: 1.5em;
   height: 1.5em;
+  padding: 0 1em;
   color: #FFF;
   font-size: 1.5em;
+  border-left: 1px solid #444;
+}
+
+#mobile-login {
+  width: auto;
+  font-size: 1em;
+  line-height: 2.25;
+  height: 100%;
+  padding: 0 0.25em;
 }
 
 #mobile-login a {
   color: #FFF !important;
+  display: block;
+}
+
+#mobile-menu.active {
+  color: #81B953;
 }
 
 #mobile-menu i {
@@ -83,6 +98,7 @@ header img {
   text-align: center;
   line-height: 1.5;
   height: 100%;
+  margin: auto;
 }
 
 #main-navigation {
@@ -402,6 +418,7 @@ button:hover {
 
 textarea {
   border: 1px solid #CCC;
+  -webkit-appearance: none;
 }
 
 select {
