--- a/sympy-live/css/live-sphinx.css
+++ b/sympy-live/css/live-sphinx.css
@@ -9,9 +9,9 @@
   border: 1px solid #CCC;
   border-right: 0;
   border-bottom: 0;
-  padding: 10px 23px 20px 7px;
+  padding: 10px 5px;
   background: #FFF;
-  box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, 0.2);
 
   display: none;
 }
@@ -26,6 +26,15 @@
 
 .sympy-live-output {
   width: 600px;
+  -webkit-transition: all 300ms ease-out;
+  -moz-transition: all 300ms ease-out;
+  -ms-transition: all 300ms ease-out;
+  -o-transition: all 300ms ease-out;
+  transition: all 300ms ease-out;
+}
+
+.sympy-live-toolbar button {
+  margin-left: 0;
 }
 
 #toggleShell {
@@ -125,11 +134,31 @@
   -ms-transition: all 300ms ease-out;
   -o-transition: all 300ms ease-out;
   transition: all 300ms ease-out;
-  max-height: 0;
+  opacity: 0;
+  height: 0;
 }
 
 #settings.shown .content {
-  max-height: 500px;
+  opacity: 1;
+  display: block;
+}
+
+/* Right-docking mode */
+
+#shell.dock-right {
+  position: fixed;
+  height: auto;
+  top: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.body.dock-right {
+  margin-right: 605px;
+}
+
+.bodywrapper.dock-right {
+  margin-right: 0;
 }
 
 /* Code blocks on page */
