--- a/sympy-live/css/live-core.css
+++ b/sympy-live/css/live-core.css
@@ -3,7 +3,7 @@
     font-size: 1em;
     margin: 0;
     padding: 0.25em;
-    width: 99%;
+    width: 100%;
     height: 25em;
     overflow: auto;
     border: 0;
@@ -21,43 +21,28 @@
 .sympy-live-caret {
     font-family: monospace;
     font-size: 1em;
-    width: 9%;
+    width: 10%;
+    width: -moz-calc(3.5em);
+    width: -webkit-calc(3.5em);
+    width: calc(3.5em);
     border: 0;
     border-top: 1px solid silver;
     margin: 0;
-    padding: 5px;
+    padding: 5px 0;
     margin-right: 0;
-    padding-right: 0;
     outline: none;
     overflow: hidden;
     background-color: #f5f5f5;
     resize: none;
 }
 
-@media screen and (min-width: 1280px) {
-  .sympy-live-caret {
-    width: 7%;
-  }
-
-  .sympy-live-prompt {
-    width: 92%;
-  }
-}
-
-@media screen and (min-width: 1920px) {
-  .sympy-live-caret {
-    width: 5%;
-  }
-
-  .sympy-live-prompt {
-    width: 93%;
-  }
-}
-
 .sympy-live-prompt {
     font-family: monospace;
     font-size: 1em;
     width: 90%;
+    width: -moz-calc(100% - 3.5em);
+    width: -webkit-calc(100% - 3.5em);
+    width: calc(100% - 3.5em);
     border: 0;
     border-top: 1px solid silver;
     margin: 0;
@@ -83,6 +68,7 @@
 }
 
 .sympy-live-toolbar > button {
+  line-height: 1;
   margin-right: 0.5em;
   padding: 0.5em;
 }
@@ -332,15 +318,10 @@
     height: 15em;
   }
 
-  .sympy-live-caret {
-    width: 50px;
-  }
-
   .sympy-live-prompt {
-    position: absolute;
-    width: auto;
-    right: 50px;
-    left: 50px;
+    width: -moz-calc(100% - 3.5em - 35px);
+    width: -webkit-calc(100% - 3.5em - 35px);
+    width: calc(100% - 3.5em - 35px);
   }
 
   .content {
@@ -364,9 +345,8 @@
     display: inline-block;
     width: 30px;
     height: 5em;
-    position: absolute;
-    right: 20px;
     font-family: monospace;
+    float: right;
   }
 
   #sympy-live-toolbar-history button {
