--- a/css/base.css
+++ b/css/base.css
@@ -158,7 +158,7 @@ header img {
   border-radius: 7px;
   padding: 0.25em 0.5em;
   border: 1px solid #CCC;
-  margin-bottom: 2em;
+  margin-bottom: 1.5em;
 }
 
 #banner h2 {
@@ -351,7 +351,7 @@ footer a:link, footer a:visited, footer a:hover, footer a:active {
   }
 
   #content, #banner {
-    padding: 1em;
+    padding: 0.5em 1em;
   }
 
   #sidebar {
