--- a/css/base.css
+++ b/css/base.css
@@ -158,13 +158,14 @@ header img {
   border-radius: 7px;
   padding: 0.25em 0.5em;
   border: 1px solid #CCC;
-  margin-bottom: 1.5em;
+  margin-bottom: 1em;
 }
 
 #banner h2 {
   color: #FFF;
   font-size: 1.75em;
   font-weight: 300;
+  margin: 0.1em 0;
 }
 
 #banner a:link, #banner a:visited, #banner a:hover, #banner a:active {
@@ -313,6 +314,7 @@ footer a:link, footer a:visited, footer a:hover, footer a:active {
     background: #3B5526;
     border-radius: 7px;
     position: static;
+    margin-bottom: 1em;
   }
 
   #main-navigation ul {
@@ -384,7 +386,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   color: #3B5526;
-  margin: 0.25em 0;
+  margin: 0.1em 0 0.25em 0;
 }
 
 h1 {
